<resources>
    <string name="app_name">CONTIC</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="centimetro">Máximo de 100 cm</string>
    <string name="fieldObrigatorio">Campos assinalados com * são obrigatórios</string>
    <string name="coordenadaX">Coordenada X:  </string>
    <string name="coordenadaY">Coordenada Y:  </string>

    <string name="variableProcess">Variáveis do Processo</string>
    <string name="avgCoordX">Média Coordenada X: </string>
    <string name="avgCoordY">Média Coordenada Y: </string>
    <string name="avgAngTheta">Média Ângulo Theta: </string>
    <string name="avgVelV">Média Velocidade Linear: </string>
    <string name="avgVelW">Média Velocidade Angular: </string>
    <string name="avgWr">Média Wr: </string>
    <string name="avgWl">Média Wl: </string>

    <string name="lastCoordX">Coordenada X atual: </string>
    <string name="lastCoordY">Coordenada Y atual: </string>
    <string name="lastAngTheta">Ângulo Theta atual: </string>
    <string name="lastVelV">Velocidade Linear atual: </string>
    <string name="lastVelW">Velocidade Angular atual: </string>
    <string name="lastWr">Wr atual: </string>
    <string name="lastWl">Wl atual: </string>
    <string name="lastError">Erro posição atual:</string>

    <string name="graph_prompt">Selecione um gráfico:</string>
    <string name="controladorProporcional">Ganho do Controlador P: </string>
    <string name="controladorIntegral">Ganho do Controlador I: </string>

    <string-array name="graph_types">
        <item>Percurso</item>
        <item>Posição X x Tempo</item>
        <item>Posição Y x Tempo</item>
        <item>Theta x Tempo</item>
        <item>Velocidade Linear x Tempo</item>
        <item>Velocidade Angular x Tempo</item>
        <item>Erro de posição x Tempo</item>
    </string-array>

</resources>
