<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cv"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#B2DFDB"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="false"
        app:cardPreventCornerOverlap="true"
        app:cardMaxElevation="4dp"
        app:cardCornerRadius="6dp"
        tools:context="com.example.guilhermealvarenga.ntcc.Fragment.DataFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:layout_width="145dp"
                android:layout_height="125dp"
                android:id="@+id/robo_photo"
                android:padding="2dp"
                android:src="@drawable/robo"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/name_robo"
                android:textSize="27sp"
                android:textColor="@color/black"
                android:paddingTop="25dp"
                android:paddingLeft="7dp"
                android:paddingBottom="5dp"
                android:text="Robo"
                android:textStyle="bold"
                android:layout_alignTop="@+id/robo_photo"
                android:layout_toEndOf="@+id/robo_photo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/end_mac_robo"
                android:textSize="19sp"
                android:textColor="@color/black"
                android:paddingLeft="7dp"
                android:layout_below="@+id/name_robo"
                android:text="00:16:53:17:EF:5E"
                android:layout_alignStart="@+id/name_robo"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lastCoordX"
                android:id="@+id/coordX"
                android:padding="7dp"
                android:layout_below="@+id/position"
                android:layout_alignParentStart="true"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lastCoordY"
                android:id="@+id/coordY"
                android:textColor="@color/black"
                android:padding="7dp"
                android:layout_below="@+id/coordX"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/position"
                android:id="@+id/position"
                android:textColor="@color/colorSelectedTab"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/robo_photo"
                android:layout_alignParentEnd="true"
                android:gravity="center_horizontal"
                android:paddingTop="33dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:paddingBottom="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lastAngTheta"
                android:id="@+id/theta"
                android:layout_below="@+id/coordY"
                android:layout_alignParentStart="true"
                android:padding="8dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lastVelV"
                android:id="@+id/velV"
                android:layout_below="@+id/theta"
                android:textColor="@color/black"
                android:padding="8dp"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lastVelW"
                android:id="@+id/velW"
                android:layout_below="@+id/velV"
                android:textColor="@color/black"
                android:padding="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edtCoordX"
                android:layout_below="@+id/position"
                android:layout_toEndOf="@+id/coordX"
                android:text=" 0.490"
                android:paddingLeft="5dp"
                android:textSize="19sp"
                android:textColor="@color/black"
                android:padding="8dp"
                android:layout_alignBottom="@+id/coordX" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edtCoordY"
                android:layout_above="@+id/theta"
                android:layout_toEndOf="@+id/theta"
                android:layout_below="@+id/edtCoordX"
                android:text=" 0.929"
                android:textSize="19sp"
                android:paddingLeft="5dp"
                android:padding="8dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edtAngTheta"
                android:layout_above="@+id/velV"
                android:layout_toEndOf="@+id/theta"
                android:text=" 12.83"
                android:textSize="19sp"
                android:padding="8dp"
                android:paddingLeft="5dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edtVelV"
                android:text=" 38.82"
                android:textSize="19sp"
                android:padding="8dp"
                android:paddingLeft="5dp"
                android:textColor="@color/black"
                android:layout_alignTop="@+id/velV"
                android:layout_toEndOf="@+id/velV" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edtVelW"
                android:layout_alignBottom="@+id/velW"
                android:text=" 62.89"
                android:padding="8dp"
                android:textSize="19sp"
                android:paddingLeft="5dp"
                android:textColor="@color/black"
                android:layout_alignTop="@+id/velW"
                android:layout_toEndOf="@+id/velW" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lastError"
                android:id="@+id/erroPosicao"
                android:layout_alignParentStart="true"
                android:textColor="@color/black"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:paddingLeft="7dp"
                android:paddingRight="0dp"
                android:layout_toStartOf="@+id/edtCoordX"
                android:layout_below="@+id/velW"
                android:layout_alignEnd="@+id/velV" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/edtError"
                android:text="62.89"
                android:padding="8dp"
                android:textSize="19sp"
                android:paddingLeft="1dp"
                android:textColor="@color/black"
                android:layout_below="@+id/velW"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/erroPosicao" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>